[tool.poetry]
name = "optimal-gift-exchange"
version = "0.1.0"
description = "\"A model to simulate a holiday gift exchage\""
authors = ["Spencer Graham <sl.graha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5.3"
scipy = "^1.4.1"
numpy = "^1.18.0"
pandas = "^0.25.3"
cadcad = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
